--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,13 @@
   "description": "company social network",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "start-docker": "npm install sharp && nodemon server.js"
   },
   "author": "Ilies Mansour",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
@@ -21,7 +22,7 @@
     "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "sharp": "^0.31.0",
+    "sharp": "^0.31.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
